# PrecastTracker.WebApi/Controllers/TesterReportController.cs
@@ -1,5 +1,6 @@
 using Microsoft.AspNetCore.Mvc;
 using PrecastTracker.Business;
+using PrecastTracker.Contracts.DTOs.RequestResponse;
 
 namespace PrecastTracker.WebApi.Controllers;
 
@@ -16,6 +17,8 @@ public class TesterReportController : BaseController<TesterReportController>
     }
 
     [HttpGet("tests-due-today")]
+    [ProducesResponseType(typeof(IEnumerable<TestCylinderQueueResponse>), StatusCodes.Status200OK)]
+    [ProducesResponseType(typeof(ProblemDetails), StatusCodes.Status500InternalServerError)]
     public async Task<IActionResult> GetTestsDueToday()
     {
         var result = await _business.GetTestsDueTodayAsync();
@@ -23,6 +26,8 @@ public class TesterReportController : BaseController<TesterReportController>
     }
 
     [HttpGet("tests-overdue")]
+    [ProducesResponseType(typeof(IEnumerable<TestCylinderQueueResponse>), StatusCodes.Status200OK)]
+    [ProducesResponseType(typeof(ProblemDetails), StatusCodes.Status500InternalServerError)]
     public async Task<IActionResult> GetTestsOverdue()
     {
         var result = await _business.GetTestsOverdueAsync();
@@ -30,6 +35,8 @@ public class TesterReportController : BaseController<TesterReportController>
     }
 
     [HttpGet("tests-upcoming")]
+    [ProducesResponseType(typeof(IEnumerable<TestCylinderQueueResponse>), StatusCodes.Status200OK)]
+    [ProducesResponseType(typeof(ProblemDetails), StatusCodes.Status500InternalServerError)]
     public async Task<IActionResult> GetTestsUpcoming([FromQuery] int days = 7)
     {
         var result = await _business.GetTestsUpcomingAsync(days);
